fix title left-align

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -794,6 +794,10 @@ p {
     text-align: left;
   }
 
+  .about-title .title {
+    text-align: left;
+  }
+
 
   @media only screen and (min-width: 992px) and (max-width: 1199px) {
     .hero-subtitle {
